--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@
 }
 
 :root {
-    --bg-color: #1f242d;
-    --second-bg-color: #323946;
+    /* --bg-color: #1f242d;
+    --second-bg-color: #323946; */
+    --bg-color: #282841;
+    --second-bg-color: #213250;
     --text-color: #fff;
     --main-color: #0ef;
 }
@@ -185,7 +187,7 @@ span {
 }
 
 .about-img img {
-    width: 22vw;
+    width: 25vw;
     transition: .4s ease;
     /* border-radius: 50%; */
 }
@@ -408,23 +410,83 @@ span {
 }
 
 .portfolio-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
     align-items: center;
-    gap: 2.5rem;
+    justify-content: space-between;
+    width: 100%;
+    height: 60vh;
+}
+
+.cover {
+    position: relative;
+    width: 100%;
+    height: 80%;
+}
+
+.cover::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    z-index: 99;
+    height: 90%;
+    width: 50px;
+    background-image: linear-gradient(90deg, black, transparent);
+}
+
+.cover::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    z-index: 99;
+    height: 90%;
+    width: 50px;
+    background-image: linear-gradient(-90deg, black, transparent);
+}
+
+.scroll-images {
+    width: 100%;
+    height: 95%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: auto;
+    position: relative;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+}
+
+.scroll-images::-webkit-scrollbar {
+    -webkit-appearance: none;
 }
 
 .portfolio-container .portfolio-box {
-    position: relative;
-    border-radius: 2rem;
-    box-shadow: 0 0 1rem var(--bg-color);
+    min-width: 300px;
+    height: 250px;
+    margin: 5px 10px;
+    cursor: pointer;
     overflow: hidden;
-    display: flex;
+    box-shadow: 0 0 1.4rem var(--bg-color);
 }
+
+/* .portfolio-container .icon {
+    color: azure;
+    background: none;
+    font-size: 50px;
+    outline: none;
+    border: none;
+    padding: 0px 20px;
+    cursor: pointer;
+} */
+
+/* .portfolio-container .icon:hover{
+    color: var(--main-color);
+} */
 
 .portfolio-box img {
     width: 100%;
-    height: 45vh;
+    height: 100%;
 
     transition: .5s ease;
 }
@@ -444,6 +506,7 @@ span {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: #0b0a4e;
     text-align: center;
     padding: 0 4rem;
     transform: translateY(100%);
@@ -455,21 +518,21 @@ span {
 }
 
 .portfolio-layer h4 {
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 .portfolio-layer p {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     margin: .3rem 0 1rem;
-    line-height: 2rem;
+    line-height: 1.5rem;
 }
 
 .portfolio-layer a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 5rem;
-    height: 5rem;
+    width: 3rem;
+    height: 3rem;
     background: var(--text-color);
     border-radius: 50%;
 }
@@ -478,6 +541,7 @@ span {
     font-size: 2rem;
     color: var(--second-bg-color);
 }
+
 
 .contact h2 {
     margin-bottom: 1.5rem;
@@ -658,18 +722,13 @@ span {
         font-size: 5rem;
     }
 
-    .home-img img {
-        width: 28vw;
-        margin-top: 4rem;
+    .home-img img,
+    .about-img img {
+        width: 32vw;
     }
 
     .about {
         flex-direction: column-reverse;
-    }
-
-    .about img {
-        width: 28vw;
-        margin-top: 4rem;
     }
 
     .service h2 {
@@ -710,6 +769,11 @@ span {
     .soft-skills {
         margin-left: 8rem;
     }
+
+    .home-img img,
+    .about-img img {
+        width: 100vw;
+    }
 }
 
 @media (max-width:450px) {
@@ -728,15 +792,18 @@ span {
     .about-more h1 {
         font-size: 2.8rem;
     }
+
+    .home-img img,
+    .about-img img {
+        width: 100vw;
+    }
 }
 
 @media (max-width:365px) {
-    .home-img img {
-        width: 22vw;
-    }
 
+    .home-img img,
     .about-img img {
-        width: 22vw;
+        width: 200vw;
     }
 
     .footer {
